--- a/index.html
+++ b/index.html
@@ -25,30 +25,29 @@
 
 <body>
   <main class="container">
-    <section role="content" class="main-content">
-      <section role="banner" class="banner">
+    <section role="content" class="main-content d-flex-direction-column">
+      <div class="banner">
         <img src="./assets/images/image-omelette.jpeg" alt="plate with omelete along with cheese" />
-      </section>
+      </div>
       <section class="content">
         <div class="content-1">
-          <div class="heading">
-            <h1>Simple Omelette Recipe</h1>
+          <div class="d-flex-direction-column gap-24">
+            <h1 class="ff-heading fw-normal">Simple Omelette Recipe</h1>
             <p>
               An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
               to perfection, optionally filled with your choice of cheese, vegetables, or meats.
             </p>
           </div>
-          <div class="preparation">
-            <h3>Preparation time</h3>
-
+          <div class="preparation d-flex-direction-column">
+            <h2 class="fw-semi-bold">Preparation time</h2>
             <ul>
-              <li><span class="strong-text">Total:</span> Approximately 10 minutes</li>
-              <li><span class="strong-text">Preparation:</span> 5 minutes</li>
-              <li><span class="strong-text">Cooking:</span> 5 minutes</li>
+              <li><span class="fw-bold">Total:</span> Approximately 10 minutes</li>
+              <li><span class="fw-bold">Preparation:</span> 5 minutes</li>
+              <li><span class="fw-bold">Cooking:</span> 5 minutes</li>
             </ul>
           </div>
-          <div class="ingredients">
-            <h3>Ingredients</h2>
+          <div class="ingredients d-flex-direction-column gap-24">
+            <h2 class="ff-heading fw-normal">Ingredients</h2>
               <ul>
                 <li>2-3 large eggs</li>
                 <li>Salt, to taste</li>
@@ -58,65 +57,65 @@
               </ul>
           </div>
         </div>
-        <div class="content-2">
-          <h3>Instructions</h3>
+        <div class="content-2 d-flex-direction-column gap-24">
+          <h2 class="ff-heading fw-normal">Instructions</h2>
           <ol>
-            <li><span>Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
+            <li><span class="fw-bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
               mixed.
               You can add a tablespoon of water or milk for a fluffier texture.</li>
 
-            <li><span>Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+            <li><span class="fw-bold">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
 
-            <li><span>Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
+            <li><span class="fw-bold">Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
               to ensure
               the eggs evenly coat the surface.</li>
 
             <li>
-              <span>fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in
+              <span class="fw-bold">fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in
               the
               middle, sprinkle your chosen fillings over one half of the omelette.
             </li>
 
             <li>
-              <span>Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over
+              <span class="fw-bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over
               the
               fillings. Let it cook for another minute, then slide it onto a plate.
             </li>
 
-            <li><span>Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
+            <li><span class="fw-bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
           </ol>
         </div>
-        <div class="content-3">
-          <h3>Nutrition</h3>
+        <div class="content-3 d-flex-direction-column gap-24">
+          <h2 class="ff-heading fw-normal">Nutrition</h2>
 
           <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
           <div class="nutrition-table">
             <div class="row">
               <div class="cell">Calories</div>
-              <div class="cell highlight">277kcal</div>
+              <div class="cell highlight fw-bold">277kcal</div>
             </div>
             <div class="row">
               <div class="cell">Carbs</div>
-              <div class="cell highlight">0g</div>
+              <div class="cell highlight fw-bold">0g</div>
             </div>
             <div class="row">
               <div class="cell">Protein</div>
-              <div class="cell highlight">20g</div>
+              <div class="cell highlight fw-bold">20g</div>
             </div>
             <div class="row">
               <div class="cell">Fat</div>
-              <div class="cell highlight">22g</div>
+              <div class="cell highlight fw-bold">22g</div>
             </div>
           </div>
         </div>
       </section>
-      <section>
+      <div>
         <div class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
           Coded by <a href="#">Karthik</a>.
         </div>
-      </section>
+      </div>
   </main>
 </body>
 
