--- a/index.html
+++ b/index.html
@@ -9,27 +9,15 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Recipe page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
   <main class="container">
-    <section role="content" class="main-content d-flex-direction-column">
+    <section role="main" class="main-content d-flex-direction-column">
       <div class="banner">
         <img src="./assets/images/image-omelette.jpeg" alt="plate with omelete along with cheese" />
       </div>
-      <section class="content">
+      <div class="content">
         <div class="content-1">
           <div class="d-flex-direction-column gap-24">
             <h1 class="ff-heading fw-normal">Simple Omelette Recipe</h1>
@@ -109,7 +97,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <div>
         <div class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
