accesibility issue fixes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <main class="container">
-    <section role="main" class="main-content d-flex-direction-column">
+    <section class="main-content d-flex-direction-column">
       <div class="banner">
         <img src="./assets/images/image-omelette.jpeg" alt="plate with omelete along with cheese" />
       </div>
