--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="preparation d-flex-direction-column">
             <h2 class="fw-semi-bold">Preparation time</h2>
-            <ul>
+            <ul class="d-flex-direction-column">
               <li><span class="fw-bold">Total:</span> Approximately 10 minutes</li>
               <li><span class="fw-bold">Preparation:</span> 5 minutes</li>
               <li><span class="fw-bold">Cooking:</span> 5 minutes</li>
@@ -36,7 +36,7 @@
           </div>
           <div class="ingredients d-flex-direction-column gap-24">
             <h2 class="ff-heading fw-normal">Ingredients</h2>
-              <ul>
+              <ul class="d-flex-direction-column">
                 <li>2-3 large eggs</li>
                 <li>Salt, to taste</li>
                 <li>Pepper, to taste</li>
@@ -47,7 +47,7 @@
         </div>
         <div class="content-2 d-flex-direction-column gap-24">
           <h2 class="ff-heading fw-normal">Instructions</h2>
-          <ol>
+          <ol class="d-flex-direction-column">
             <li><span class="fw-bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
               mixed.
               You can add a tablespoon of water or milk for a fluffier texture.</li>
