--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               the eggs evenly coat the surface.</li>
 
             <li>
-              <span class="fw-bold">fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in
+              <span class="fw-bold">Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in
               the
               middle, sprinkle your chosen fillings over one half of the omelette.
             </li>
