--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="./assets/images/image-omelette.jpeg" alt="plate with omelete along with cheese" />
       </div>
       <div class="content">
-        <div class="content-1">
+        <div class="content-1 border-bottom">
           <div class="d-flex-direction-column gap-24">
             <h1 class="ff-heading fw-normal">Simple Omelette Recipe</h1>
             <p>
@@ -45,7 +45,7 @@
               </ul>
           </div>
         </div>
-        <div class="content-2 d-flex-direction-column gap-24">
+        <div class="content-2 d-flex-direction-column gap-24 border-bottom">
           <h2 class="ff-heading fw-normal">Instructions</h2>
           <ol class="d-flex-direction-column">
             <li><span class="fw-bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
@@ -79,19 +79,19 @@
           <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
           <div class="nutrition-table">
-            <div class="row">
+            <div class="row border-bottom">
               <div class="cell">Calories</div>
               <div class="cell highlight fw-bold">277kcal</div>
             </div>
-            <div class="row">
+            <div class="row border-bottom">
               <div class="cell">Carbs</div>
               <div class="cell highlight fw-bold">0g</div>
             </div>
-            <div class="row">
+            <div class="row border-bottom">
               <div class="cell">Protein</div>
               <div class="cell highlight fw-bold">20g</div>
             </div>
-            <div class="row">
+            <div class="row border-bottom">
               <div class="cell">Fat</div>
               <div class="cell highlight fw-bold">22g</div>
             </div>
